tests/valid/BoolAssign_Valid_1.whiley
import whiley.lang.System

method main(System.Console sys) => void:
    x = true
    sys.out.println(x)
    x = false
    sys.out.println(x)
