tests/invalid/List_Invalid_2.whiley
import * from whiley.lang.*

method main(System.Console sys) => void:
    x = a2[0]
